# bigdatacorp

./: .gitignore  pyproject.toml
src/config/: settings.py
tests/config/: test_settings.py
